Fix nav hamburger button and video z-index

--- a/css/style.css
+++ b/css/style.css
@@ -194,10 +194,16 @@
   }
 
   .easy_nav-toggle {
-    align-self: flex-end;
     display: initial;
     position: absolute;
+    top: 75px;
+    right: 30px;
     cursor: pointer;
+  }
+
+  .easy_nav-scroll .easy_nav-toggle {
+    top: 0;
+    right: 10px;
   }
 
   .easy_nav-dropdown-container .easy_nav-link {
